--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: DC
+title: MFIS
 email: secretaria@dc.exa.unrc.edu.ar
 description: > # this means to ignore newlines until "baseurl:"
   Bienvenido al sitio del Departamento de Computación. Aquí encontrará información sobre la constitución del Departamento, y las actividades académicas, de investigación, extensión y transferencia que se realizan en el Departamento.
@@ -42,3 +42,5 @@ kramdown:
   parse_block_html: true # default for kramdown is false. This will enable using Markdown links
 
 exclude: ['vendor']
+
+plugins: ['jekyll-twitter-plugin']
