Updating pubs and contact email

--- a/_data/member.yml
+++ b/_data/member.yml
@@ -1,7 +1,7 @@
 - name: César Cornejo
   photo: ccornejo.jpg
   info: PhD Candidate
-  email: ccornejo@gmail.com
+  email: ccornejo@dc.exa.unrc.edu.ar
   web: https://cesarcorne.github.io
   number_educ: 0
 
