Updating DynAlloy tool description

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -5,5 +5,5 @@
   
 - name: DynAlloy Analyzer
   web: https://dc.exa.unrc.edu.ar/tools/dynalloy-web/
-  description: "A tool for the automated analysis of Dynalloy models. DynAlloy is an extension of the formal specification language Alloy. Alloy is a relatively popular formal specification language because of various reasons, including: it has simple formal semantics, based on relations; its syntax is simple, with a few constructs (with intuitive meaning); its specifications follow an OO-like style; it is designed with fully automated analysis support in mind Alloy is a model-oriented specification language, similar to other formal languages such as Z, VDM and B. DynAlloy extends Alloy by incorporating the notion of action to better describe state change and properties of state changing situations."
+  description: "DynAlloy is a formal specification language that extends Alloy (a formal specification language based on first-orded logic and relational operations including transitive closure), by incorporating actions and programs, to  better describe state change and properties of state changing situations. DynAlloy Analyzer is a tool for DynAlloy specification, built over Alloy Analyzer, that supports fully automated and efficient analysis of DynAlloy specifications, resorting to SAT solving."
 
