Updating Faculty members info

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -26,14 +26,14 @@
 
 - name: Pablo F. Castro
   photo: pcastro.jpg
-  info: Principal Investigator
+  info: Researcher
   email: pcastro@dc.exa.unrc.edu.ar
   web: https://pablofcastro.github.io/
   number_educ: 0
 
 - name: Renzo Degiovanni
   photo: rdegiovanni.jpg
-  info: Principal Investigator
+  info: Researcher
   email: renzo.degiovanni@uni.lu
   web: https://dc.exa.unrc.edu.ar/staff/rdegiovanni/en/index.html
   number_educ: 0
