Updating personal page

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -3,6 +3,7 @@
   photo: marroyo.jpg
   info: Researcher
   email: marcelo.arroyo@dc.exa.unrc.edu.ar
+  web: https://marceloarroyo.gitlab.io/
   number_educ: 0
 
 - name: Francisco Bavera
