Adding student member

--- a/_data/member.yml
+++ b/_data/member.yml
@@ -1,3 +1,9 @@
+- name: Isaias Battaglia
+  photo: ibattaglia.jpg
+  info: Student
+  email: ibattaglia@dc.exa.unrc.edu.ar
+  number_educ: 0  
+
 - name: César Cornejo
   photo: ccornejo.jpg
   info: PhD student
