Adding new member

--- a/_data/member.yml
+++ b/_data/member.yml
@@ -31,6 +31,12 @@
   web: https://facumolina.github.io/
   number_educ: 0
 
+- name: Agustin Nolasco
+  photo: anolasco.png
+  info: Student
+  email: nolasco@dc.exa.unrc.edu.ar
+  number_educ: 0
+
 - name: María Marta Novaira
   photo: defaultmember.jpg
   info: PhD student
