--- a/_data/member.yml
+++ b/_data/member.yml
@@ -18,6 +18,12 @@
   email: ckilmurray@dc.exa.unrc.edu.ar
   number_educ: 0
 
+- name: Agustin Nolasco
+  photo: anolasco.png
+  info: Student
+  email: nolasco@dc.exa.unrc.edu.ar
+  number_educ: 0
+
 - name: Facundo Molina
   photo: fmolina.jpg
   info: Postdoc
