Updating chair website

--- a/_data/chair.yml
+++ b/_data/chair.yml
@@ -2,5 +2,5 @@
   photo: naguirre.jpg
   info: Founder, Principal Investigator
   email: naguirre@dc.exa.unrc.edu.ar
-  web: https://dc.exa.unrc.edu.ar/staff/naguirre/
+  web: https://nmaguirre.github.io
   number_educ: 0
