--- a/_data/member.yml
+++ b/_data/member.yml
@@ -11,6 +11,13 @@
   email: aborda@dc.exa.unrc.edu.ar
   number_educ: 0
 
+- name: Agustin Nolasco
+  photo: anolasco.jpeg
+  info: PhD student
+  email: nolasco@dc.exa.unrc.edu.ar
+  web: https://agusnolasco.github.io
+  number_educ: 0
+
 - name: María Marta Novaira
   photo: defaultmember.jpg
   info: PhD student
