--- a/_data/member.yml
+++ b/_data/member.yml
@@ -6,7 +6,7 @@
   number_educ: 0
 
 - name: Agustin Borda
-  photo: defaultmember.jpg
+  photo: aborda.jpg
   info: PhD student
   email: aborda@dc.exa.unrc.edu.ar
   number_educ: 0
