--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -33,7 +33,7 @@
   number_educ: 0
 
 - name: Pablo Ponzio
-  photo: defaultmember.jpg
+  photo: pponzio.jpg
   info: Researcher
   email: pponzio@dc.exa.unrc.edu.ar
   number_educ: 0
@@ -65,7 +65,7 @@
   number_educ: 0
 
 - name: Marcelo Uva
-  photo: defaultmember.jpg
+  photo: muva.jpg
   info: Researcher
   email: uva@dc.exa.unrc.edu.ar
   number_educ: 0
