--- a/_data/member.yml
+++ b/_data/member.yml
@@ -57,7 +57,7 @@
   number_educ: 0
 
 - name: Nicolás Streri
-  photo: gscilingo.png
+  photo: defaultmember.jpg
   info: PhD student
   email: nstreri@dc.exa.unrc.edu.ar
   number_educ: 0
